--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap"
-        rel="stylesheet">
-    <!-- css -->
-    <link rel="stylesheet" href="./css/style.css">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>커피명가 main</title>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <!-- bxslider css -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <!-- image loaded -->
+    <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
+    <!-- bxslider js -->
+    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+    <script src="js/main.js"></script>
 </head>
 
 <body>
@@ -26,34 +31,34 @@
                 <li><a href="#">커피명가</a>
                     <ul class="depth2">
                         <li><a href="#">BRAND STORY</a></li>
-                        <li>HISTORY</li>
+                        <li><a href="#">HISTORY</a></li>
                         <li><a href="#">LOCATION</a></li>
                     </ul>
                 </li>
                 <li><a href="#">메뉴</a>
                     <ul class="depth2">
-                        <li>원두</li>
-                        <li>생두</li>
-                        <li>소산원 말차</li>
+                        <li><a href="#">원두</a></li>
+                        <li><a href="#">생두</a></li>
+                        <li><a href="#">소산원 말차</a></li>
                     </ul>
                 </li>
                 <li><a>카페</a>
                     <ul class="depth2">
-                        <li>매장찾기</li>
+                        <li><a href="#">매장찾기</a></li>
                     </ul>
                 </li>
                 <li><a>프랜차이즈</a>
                     <ul class="depth2">
-                        <li>가맹안내</li>
-                        <li>창업지원</li>
-                        <li>가맹점 현황</li>
+                        <li><a href="#">가맹안내</a></li>
+                        <li><a href="#">창업지원</a></li>
+                        <li><a href="#">가맹점 현황</a></li>
                     </ul>
                 </li>
                 <li><a>블로그</a>
                     <ul class="depth2">
-                        <li>공지사항</li>
-                        <li>보도자료</li>
-                        <li>커피칼럼</li>
+                        <li><a href="#">공지사항</a></li>
+                        <li><a href="#">보도자료</a></li>
+                        <li><a href="#">커피칼럼</a></li>
                     </ul>
                 </li>
             </ul>
@@ -62,7 +67,7 @@
     <!-- 메인 비주얼 -->
     <section id="main_visual">
         <div class="slider">
-            <img src="./images/main_banner.1.jpg" alt="main_banner_1">
+            <img src="./images/main_banner.3.jpg" alt="main_banner_1">
             <img src="./images/main_banner.2.jpg" alt="main_banner_2">
         </div>
     </section>
@@ -71,13 +76,13 @@
     <section id="main_content">
         <div class="main_content_text">
             <p><span>WE MAKE</span></p>
-            <p><strong>VALUE/PRODUCT/SPACE/COMMUNICATIONI/SOCIETY/CULTURE</strong></p>
+            <p><strong>VALUE/PRODUCT/SPACE/COMMUNICATION/SOCIETY/CULTURE</strong></p>
             <p><span>Gloval No.1 <strong>스페셜티 커피 브랜드</strong></span></p>
         </div>
         <ul class="content_list">
-            <li><a href="#"><img src="./images/main_content.1.jpg" alt="main_content.1"></a></li>
-            <li><a href="#"><img src="./images/main_content.2.jpg" alt="main_content.2"></a></li>
-            <li><a href="#"><img src="./images/main_content.3.jpg" alt="main_content.3"></a></li>
+            <li><img src="./images/main_content.1.jpg" alt="main_content.1"></li>
+            <li><img src="./images/main_content.2.jpg" alt="main_content.2"></li>
+            <li><img src="./images/main_content.3.jpg" alt="main_content.3"></li>
         </ul>
     </section>
 
