--- a/sub1-1.html
+++ b/sub1-1.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>커피명가-꿈,한 잔의 커피, 그리고 밝은 생각</title>
+    <title>커피명가 이야기-커피명가</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap"
         rel="stylesheet">
     <!-- bxslider css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/sub1-1.css">
     <script src="js/jquery-3.5.1.min.js"></script>
     <!-- image loaded -->
     <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
@@ -32,9 +33,9 @@
         <!-- navigation -->
         <nav id="gnb">
             <ul class="depth1">
-                <li><a href="/sub1-1.html">커피명가</a>
+                <li><a href="#">커피명가</a>
                     <ul class="depth2">
-                        <li><a href="/sub1-1.html">BRAND STORY</a></li>
+                        <li><a href="#">BRAND STORY</a></li>
                         <li><a href="#">HISTORY</a></li>
                         <li><a href="#">LOCATION</a></li>
                     </ul>
@@ -69,53 +70,40 @@
         </nav>
     </header>
 
-    <!-- 메인 비주얼 -->
-    <section id="main_visual">
-        <div class="slider">
-            <img src="./images/main_banner.3.jpg" alt="main_banner_1">
-            <img src="./images/main_banner.2.jpg" alt="main_banner_2">
-        </div>
+    <!-- 서브 비주얼 -->
+    <section id="sub_visual">
+        <header>
+            <p>커피명가에 대하여</p>
+            <span class="under_bar"></span>
+            <p>1990년, 처음 커피로 사람들을 만났을 때<br>
+                사람들은 커피에 대해 잘 몰랐지만,<br>
+                한결같이 맛있고 따뜻함을 느끼는 모습이었습니다.<br>
+
+                원래의 커피는 멋과 맛이 있습니다.<br>
+                맛은 멋을 보여 줄 수 있어야 하고,<br>
+                맛이 빠진 멋은 생명이 없습니다.<br>
+                <br>
+                맛과 멋을 담은 커피,<br>
+                그 한 잔의 커피를 나누기 위해<br>
+                커피명가가 함께 하겠습니다.</p>
+        </header>
+        <article class="sub_content">
+            <p>꿈, 한 잔의 커피 그리고 밝은 생각 Since1990</p>
+            <span class="under_bar_2"></span>
+            <p>지구 반대편 깊고 험준한 산 속에서<br>
+                자라고 있는 것은 커피열매만이 아닙니다.<br>
+                <br>
+                빨갛고 탐스럽게 익어가는 커피열매처럼<br>
+                커피 농부들의 아이들도 하루하루 자라고 있습니다.<br>
+                <br>
+                아이들의 웃음 소리에 커피나무가 흔들리고<br>
+                덩달아 커피농장에도 웃음 소리가 퍼지는 커피 산지.<br>
+                <br>
+                커피명가는 최고의 커피는 바로 이러한 행복함 속에<br>
+                자라난 커피라고 생각합니다.</p><br>
+        </article>
     </section>
 
-    <!-- 메인 컨텐트 -->
-    <section id="main_content">
-        <div class="main_content_text">
-            <p><span>WE MAKE</span></p>
-            <p><strong>VALUE/PRODUCT/SPACE/COMMUNICATION/SOCIETY/CULTURE</strong></p>
-            <p><span>Gloval No.1 <strong>스페셜티 커피 브랜드</strong></span></p>
-        </div>
-        <ul class="content_list">
-            <li><a href="/sub1-1.html"><img src="./images/main_content.1.jpg" alt="main_content.1"></a></li>
-            <li><img src="./images/main_content.2.jpg" alt="main_content.2"></li>
-            <li><img src="./images/main_content.3.jpg" alt="main_content.3"></li>
-        </ul>
-        <div id="content_list_info">
-            <div class="content_list_info_1">
-                <p><span>COFFEE MYUNGGA IS</span></p>
-                <p><span>맛과 멋을 담은 커피,그 한 잔의 커피를 나누기 위해 커피명가가 함께 하겠습니다.</span></p>
-            </div>
-            <div class="content_list_info_2">
-                <p><span>COFFEE & BAKERY</span></p>
-                <p><span>커피와 함께 오랫동안 사랑받은 수제 베이커리 메뉴 모든 베이커리 메뉴는 커피명가 패밀리숍에서 정성껏 직접 만듭니다.</span></p>
-            </div>
-            <div class="content_list_info_3">
-                <p><span>FRANCHISE</span></p>
-                <p><span>커피명가와 함께 새로운 성공의 파트너가 되시길 기원합니다.</span></p>
-            </div>
-        </div>
-    </section>
-
-    <!-- 비디오 -->
-    <section id="video">
-        <span class="line"></span>
-        <div class="video_title">
-            <p><span>BRAND VIDEO</span></p>
-        </div>
-        <ul class="video_list">
-            <li><iframe width="560" height="315" src="https://www.youtube.com/embed/LWQl7AnO5kg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-            <li><iframe width="560" height="315" src="https://www.youtube.com/embed/Ds25HZBh0_E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-        </ul>
-    </section>
 
     <!-- 푸터 -->
     <footer id="main_footer">
