--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <!-- navigation -->
         <nav id="gnb">
             <ul class="depth1">
-                <li><a href="/sub1-1.html">커피명가</a>
+                <li><a href="sub1-1.html">커피명가</a>
                     <ul class="depth2">
-                        <li><a href="/sub1-1.html">BRAND STORY</a></li>
+                        <li><a href="sub1-1.html">BRAND STORY</a></li>
                         <li><a href="#">HISTORY</a></li>
                         <li><a href="#">LOCATION</a></li>
                     </ul>
@@ -85,7 +85,7 @@
             <p><span>Gloval No.1 <strong>스페셜티 커피 브랜드</strong></span></p>
         </div>
         <ul class="content_list">
-            <li><a href="/sub1-1.html"><img src="./images/main_content.1.jpg" alt="main_content.1"></a></li>
+            <li><a href="sub1-1.html"><img src="./images/main_content.1.jpg" alt="main_content.1"></a></li>
             <li><img src="./images/main_content.2.jpg" alt="main_content.2"></li>
             <li><img src="./images/main_content.3.jpg" alt="main_content.3"></li>
         </ul>
