--- a/sub1-1.html
+++ b/sub1-1.html
@@ -10,6 +10,7 @@
     <!-- bxslider css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
     <link rel="stylesheet" href="/css/style.css">
+    <!-- sub page css -->
     <link rel="stylesheet" href="/css/sub1-1.css">
     <script src="js/jquery-3.5.1.min.js"></script>
     <!-- image loaded -->
@@ -33,9 +34,9 @@
         <!-- navigation -->
         <nav id="gnb">
             <ul class="depth1">
-                <li><a href="#">커피명가</a>
+                <li><a href="sub1-1.html">커피명가</a>
                     <ul class="depth2">
-                        <li><a href="#">BRAND STORY</a></li>
+                        <li><a href="sub1-1.html">BRAND STORY</a></li>
                         <li><a href="#">HISTORY</a></li>
                         <li><a href="#">LOCATION</a></li>
                     </ul>
@@ -100,7 +101,7 @@
                 덩달아 커피농장에도 웃음 소리가 퍼지는 커피 산지.<br>
                 <br>
                 커피명가는 최고의 커피는 바로 이러한 행복함 속에<br>
-                자라난 커피라고 생각합니다.</p><br>
+                자라난 커피라고 생각합니다.</p>
         </article>
     </section>
 
