--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         <!-- navigation -->
         <nav id="gnb">
             <ul class="depth1">
-                <li><a href="sub1-1.html">커피명가</a>
+                <li><a href="./sub1-1.html">커피명가</a>
                     <ul class="depth2">
-                        <li><a href="sub1-1.html">BRAND STORY</a></li>
+                        <li><a href="./sub1-1.html">BRAND STORY</a></li>
                         <li><a href="#">HISTORY</a></li>
                         <li><a href="#">LOCATION</a></li>
                     </ul>
                 </li>
-                <li><a href="#">메뉴</a>
+                <li><a href="./sub2-1.html">메뉴</a>
                     <ul class="depth2">
                         <li><a href="#">원두</a></li>
                         <li><a href="#">생두</a></li>
