--- a/sub2-1.html
+++ b/sub2-1.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
     <link rel="stylesheet" href="./css/style.css">
     <!-- sub page css -->
-    <link rel="stylesheet" href="./css/sub1-1.css">
+    <link rel="stylesheet" href="./css/sub2-1.css">
     <script src="js/jquery-3.5.1.min.js"></script>
     <!-- image loaded -->
     <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
@@ -71,39 +71,56 @@
         </nav>
     </header>
 
-    <!-- 서브 비주얼 -->
-    <section id="sub_visual">
+    <!-- 메뉴 비주얼 영역 -->
+    <section id="menu_visual">
         <header>
-            <p>커피명가에 대하여</p>
-            <span class="under_bar"></span>
-            <p>1990년, 처음 커피로 사람들을 만났을 때<br>
-                사람들은 커피에 대해 잘 몰랐지만,<br>
-                한결같이 맛있고 따뜻함을 느끼는 모습이었습니다.<br>
-
-                원래의 커피는 멋과 맛이 있습니다.<br>
-                맛은 멋을 보여 줄 수 있어야 하고,<br>
-                맛이 빠진 멋은 생명이 없습니다.<br>
-                <br>
-                맛과 멋을 담은 커피,<br>
-                그 한 잔의 커피를 나누기 위해<br>
-                커피명가가 함께 하겠습니다.</p>
+            <p>메뉴</p>
         </header>
-        <article class="sub_content">
-            <p>꿈, 한 잔의 커피 그리고 밝은 생각 Since1990</p>
-            <span class="under_bar_2"></span>
-            <p>지구 반대편 깊고 험준한 산 속에서<br>
-                자라고 있는 것은 커피열매만이 아닙니다.<br>
-                <br>
-                빨갛고 탐스럽게 익어가는 커피열매처럼<br>
-                커피 농부들의 아이들도 하루하루 자라고 있습니다.<br>
-                <br>
-                아이들의 웃음 소리에 커피나무가 흔들리고<br>
-                덩달아 커피농장에도 웃음 소리가 퍼지는 커피 산지.<br>
-                <br>
-                커피명가는 최고의 커피는 바로 이러한 행복함 속에<br>
-                자라난 커피라고 생각합니다.</p>
+        <nav id="lnb">
+            <ul>
+                <li><a href="#">New Arrivals</a></li>
+                <li><a href="#">Beverage</a></li>
+                <li><a href="#">Bakery</a></li>
+            </ul>
+        </nav>
+        <article id="menu_content">
+            <ul id="menu_list_1">
+                <li><img src="/images/menu.1.edit.jpg" alt="menu 1"></li>
+                <li><img src="/images/menu.2.edit.jpg" alt="menu 2"></li>
+                <li><img src="/images/menu.3.edit.jpg" alt="menu 3"></li>
+            </ul>
+            <div id="menu_list_name_1">
+                <div class="menu_1">
+                    <p><span>아메리카노</span></p>
+                </div>
+                <div class="menu_2">
+                    <p><span>명가치노</span></p>
+                </div>
+                <div class="menu_3">
+                    <p><span>말차 명가치노</span></p>
+                </div>
+            </div>
+            <ul id="menu_list_2">
+                <li><img src="/images/menu.4.edit.jpg" alt="menu 4"></li>
+                <li><img src="/images/menu.5.edit.jpg" alt="menu 5"></li>
+                <li><img src="/images/menu.6.edit.jpg" alt="menu 6"></li>
+            </ul>
+            <div id="menu_list_name_2">
+                <div class="menu_4">
+                    <p><span>아메리카노</span></p>
+                </div>
+                <div class="menu_5">
+                    <p><span>명가치노</span></p>
+                </div>
+                <div class="menu_6">
+                    <p><span>말차 명가치노</span></p>
+                </div>
+            </div>
         </article>
     </section>
+
+
+
 
 
     <!-- 푸터 -->
