--- a/sub1-1.html
+++ b/sub1-1.html
@@ -25,7 +25,7 @@
     <header id="main_header">
         <div class="logo">
             <h1>
-                <a href="./">
+                <a href="./index.html">
                     <img src="./images/logo.edit.png" alt="logo">
                 </a>
             </h1>
@@ -38,7 +38,7 @@
                     <ul class="depth2">
                         <li><a href="./sub1-1.html">BRAND STORY</a></li>
                         <li><a href="#">HISTORY</a></li>
-                        <li><a href="#">LOCATION</a></li>
+                        <li><a href="./sub2-2.html">LOCATION</a></li>
                     </ul>
                 </li>
                 <li><a href="./sub2-1.html">메뉴</a>
