--- a/sub2-1.html
+++ b/sub2-1.html
@@ -25,7 +25,7 @@
     <header id="main_header">
         <div class="logo">
             <h1>
-                <a href="./">
+                <a href="./index.html">
                     <img src="./images/logo.edit.png" alt="logo">
                 </a>
             </h1>
@@ -38,7 +38,7 @@
                     <ul class="depth2">
                         <li><a href="./sub1-1.html">BRAND STORY</a></li>
                         <li><a href="#">HISTORY</a></li>
-                        <li><a href="#">LOCATION</a></li>
+                        <li><a href="./sub2-2.html">LOCATION</a></li>
                     </ul>
                 </li>
                 <li><a href="./sub2-1.html">메뉴</a>
@@ -85,9 +85,9 @@
         </nav>
         <article id="menu_content">
             <ul id="menu_list_1">
-                <li><img src="/images/menu.1.edit.jpg" alt="menu 1"></li>
-                <li><img src="/images/menu.2.edit.jpg" alt="menu 2"></li>
-                <li><img src="/images/menu.3.edit.jpg" alt="menu 3"></li>
+                <li><img src="./images/menu.1.edit.jpg" alt="menu 1"></li>
+                <li><img src="./images/menu.2.edit.jpg" alt="menu 2"></li>
+                <li><img src="./images/menu.3.edit.jpg" alt="menu 3"></li>
             </ul>
             <div id="menu_list_name_1">
                 <div class="menu_1">
@@ -101,9 +101,9 @@
                 </div>
             </div>
             <ul id="menu_list_2">
-                <li><img src="/images/menu.4.edit.jpg" alt="menu 4"></li>
-                <li><img src="/images/menu.5.edit.jpg" alt="menu 5"></li>
-                <li><img src="/images/menu.6.edit.jpg" alt="menu 6"></li>
+                <li><img src="./images/menu.4.edit.jpg" alt="menu 4"></li>
+                <li><img src="./images/menu.5.edit.jpg" alt="menu 5"></li>
+                <li><img src="./images/menu.6.edit.jpg" alt="menu 6"></li>
             </ul>
             <div id="menu_list_name_2">
                 <div class="menu_4">
