--- a/sub2-2.html
+++ b/sub2-2.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>커피명가-꿈,한 잔의 커피, 그리고 밝은 생각</title>
+    <title>커피명가 이야기-커피명가</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap"
         rel="stylesheet">
     <!-- bxslider css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
     <link rel="stylesheet" href="./css/style.css">
+    <!-- sub page css -->
+    <link rel="stylesheet" href="./css/sub2-2.css">
     <script src="js/jquery-3.5.1.min.js"></script>
     <!-- image loaded -->
     <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
@@ -23,7 +25,7 @@
     <header id="main_header">
         <div class="logo">
             <h1>
-                <a href="./">
+                <a href="./index.html">
                     <img src="./images/logo.edit.png" alt="logo">
                 </a>
             </h1>
@@ -69,52 +71,44 @@
         </nav>
     </header>
 
-    <!-- 메인 비주얼 -->
-    <section id="main_visual">
-        <div class="slider">
-            <img src="./images/main_banner.3.jpg" alt="main_banner_1">
-            <img src="./images/main_banner.2.jpg" alt="main_banner_2">
-        </div>
+
+    <section id="location_visual">
+        <header>
+            <p>오시는 길</p>
+        </header>
     </section>
 
-    <!-- 메인 컨텐트 -->
-    <section id="main_content">
-        <div class="main_content_text">
-            <p><span>WE MAKE</span></p>
-            <p><strong>VALUE/PRODUCT/SPACE/COMMUNICATION/SOCIETY/CULTURE</strong></p>
-            <p><span>Gloval No.1 <strong>스페셜티 커피 브랜드</strong></span></p>
+    <section id="location_content">
+        <div class="location_content_text">
+            <p><span>커피명가</span></p>
+            <p><span>본사 안내</span></p>
         </div>
-        <ul class="content_list">
-            <li><a href="sub1-1.html"><img src="./images/main_content.1.jpg" alt="main_content.1"></a></li>
-            <li><img src="./images/main_content.2.jpg" alt="main_content.2"></li>
-            <li><img src="./images/main_content.3.jpg" alt="main_content.3"></li>
-        </ul>
-        <div id="content_list_info">
-            <div class="content_list_info_1">
-                <p><span>COFFEE MYUNGGA IS</span></p>
-                <p><span>맛과 멋을 담은 커피,그 한 잔의 커피를 나누기 위해 커피명가가 함께 하겠습니다.</span></p>
-            </div>
-            <div class="content_list_info_2">
-                <p><span>COFFEE & BAKERY</span></p>
-                <p><span>커피와 함께 오랫동안 사랑받은 수제 베이커리 메뉴 모든 베이커리 메뉴는 커피명가 패밀리숍에서 정성껏 직접 만듭니다.</span></p>
-            </div>
-            <div class="content_list_info_3">
-                <p><span>FRANCHISE</span></p>
-                <p><span>커피명가와 함께 새로운 성공의 파트너가 되시길 기원합니다.</span></p>
-            </div>
-        </div>
-    </section>
 
-    <!-- 비디오 -->
-    <section id="video">
-        <span class="line"></span>
-        <div class="video_title">
-            <p><span>BRAND VIDEO</span></p>
-        </div>
-        <ul class="video_list">
-            <li><iframe width="560" height="315" src="https://www.youtube.com/embed/LWQl7AnO5kg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-            <li><iframe width="560" height="315" src="https://www.youtube.com/embed/Ds25HZBh0_E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-        </ul>
+
+            <!-- * 카카오맵 - 지도퍼가기 -->
+            <!-- 1. 지도 노드 -->
+            <div id="daumRoughmapContainer1604291956329" class="root_daum_roughmap root_daum_roughmap_landing" style="width: 100%;"></div>
+
+            <!--
+	2. 설치 스크립트
+	* 지도 퍼가기 서비스를 2개 이상 넣을 경우, 설치 스크립트는 하나만 삽입합니다.
+-->
+            <script charset="UTF-8" class="daum_roughmap_loader_script"
+                src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"></script>
+
+            <!-- 3. 실행 스크립트 -->
+            <script charset="UTF-8">
+                new daum.roughmap.Lander({
+                    "timestamp": "1604291956329",
+                    "key": "22r7h",
+                    "mapHeight": "452"
+                }).render();
+            </script>
+            <ul id="map_info">
+                <li><span><strong>주소</strong> 대구광역시 중구 동덕로 26길 104 2층</span></li>
+                <li><span><strong>대표전화</strong>053-254-0892</span></li>
+                <li><span><strong>팩스</strong>053-254-1474</span></li>
+            </ul>
     </section>
 
     <!-- 푸터 -->
