--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
     <section id="main_visual">
         <div class="slider">
             <img src="./images/main_banner.3.jpg" alt="main_banner_1">
-            <img src="./images/main_banner.2.jpg" alt="main_banner_2">
+            <img src="./images/main_banner.2-3.jpg" alt="main_banner_2">
+            <img src="./images/main_banner.1.jpg" alt="main_banner_3">
         </div>
     </section>
 
@@ -86,7 +87,7 @@
         </div>
         <ul class="content_list">
             <li><a href="sub1-1.html"><img src="./images/main_content.1.jpg" alt="main_content.1"></a></li>
-            <li><img src="./images/main_content.2.jpg" alt="main_content.2"></li>
+            <li><a href="sub2-1.html"><img src="./images/main_content.2.jpg" alt="main_content.2"></a></li>
             <li><img src="./images/main_content.3.jpg" alt="main_content.3"></li>
         </ul>
         <div id="content_list_info">
