--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
     <!-- 메인 비주얼 -->
     <section id="main_visual">
         <div class="slider">
-            <img src="./images/main_banner.3.jpg" alt="main_banner_1">
-            <img src="./images/main_banner.4.jpg" alt="main_banner_2">
-            <img src="./images/main_banner.1.jpg" alt="main_banner_3">
+            <img src="./images/main_banner.4.jpg" alt="main_banner_1">
+            <img src="./images/main_banner.1.jpg" alt="main_banner_2">
+            <img src="./images/main_banner.2-3.jpg" alt="main_banner_3">
         </div>
     </section>
 
