--- a/sub2-1.html
+++ b/sub2-1.html
@@ -107,13 +107,13 @@
             </ul>
             <div id="menu_list_name_2">
                 <div class="menu_4">
-                    <p><span>아메리카노</span></p>
+                    <p><span>민트초코카푸치노</span></p>
                 </div>
                 <div class="menu_5">
-                    <p><span>명가치노</span></p>
+                    <p><span>아이스 명가치노</span></p>
                 </div>
                 <div class="menu_6">
-                    <p><span>말차 명가치노</span></p>
+                    <p><span>아이스 말차 명가치노</span></p>
                 </div>
             </div>
         </article>
